panel & panel top added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 </head>
     <body class="">
         <div id="main">
-            <h1 class="text-white">Hiiiiiiiiiiiiiiii</h1>
+            <h1 class="text-pink-400">Hiiiiiiiiiiiiiiii</h1>
+            <div id="panel">
+                <div id="ptop">
+                    
+                </div>
+
+            </div>
         </div>
     </body>
 </html>
