--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="dark" class="size-full">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bubble Game</title>
-    <!-- daisy ui with tailwind -->
+
+    <!-- daisy ui  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <!-- tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="style.css">
+
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,11 +19,17 @@
     
 
 </head>
-    <body class="">
-        <div id="main">
+    <body class="size-full">
+        <div id="main" class= "size-full flex items-center justify-center bg-slate-200">
             <h1 class="text-pink-400">Hiiiiiiiiiiiiiiii</h1>
-            <div id="panel">
-                <div id="ptop">
+            <div id="panel" class="w-4/5 h-4/5 rounded-lg bg-white">
+                <div id="ptop" class= "w-full h-20 bg-blue-300 ">
+                    <div id="scor-container" class=" text-white">
+                        <div class="box">Hit</div>
+                        <div class="box">Timer</div>
+                        <div class="box">Score</div>
+
+                    </div>
                     
                 </div>
 
