add timer with interval

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             </div> 
                             <div id="timer-label" class="p-2 flex gap-2 items-center  text-black  ">
                                 Timer
-                                <div id="timer" class=" bg-white p-2 h-10 w-12 border-2 text-stone-500">
+                                <div id="timerVal" class=" bg-white p-2 h-10 w-12 border-2 text-stone-500">
                                     60
                                 </div>
                             </div> 
