add hit score function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <div id="score-container" class="flex justify-between p-4 ">
                             <div id="hit-label" class="p-2 flex gap-2 items-center  text-black  ">
                                 Hit
-                                <div id="hit-Score" class=" bg-white p-2 h-10 w-12 border-2 text-stone-500">
+                                <div id="hit-Number" class=" bg-white p-2 h-10 w-12 border-2 text-stone-500">
                                     115
                                 </div>
                             </div> 
@@ -42,7 +42,7 @@
                             </div> 
                             <div id="hit-label" class="p-2 flex gap-2 items-center  text-black  ">
                                Score
-                                <div id="Score" class=" bg-white p-2 h-10 w-12 border-2 text-stone-500">
+                                <div id="Hit-Score" class=" bg-white p-2 h-10 w-12 border-2 text-stone-500">
                                     501
                                 </div>
                             </div> 
