--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
     <body class="w-11/12 m-auto size-full">
-        <h1 class="text-center text-4xl">Babble Game</h1>
+        <h1 class="text-center text-4xl">Bubble Game</h1>
         <div id="main" class= "w-11/12 m-auto size-full flex items-center justify-center bg-slate-200">
             
                 <div id="panel" class="w-4/5 h-4/5 rounded-lg bg-white">
